--- a/src/edudialog.ui
+++ b/src/edudialog.ui
@@ -96,9 +96,6 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>0</number>
-                    </property>
                     <widget class="QTextBrowser" row="3" column="0" rowspan="1" colspan="4">
                         <property name="name">
                             <cstring>descriptionTextBrowser</cstring>
@@ -232,23 +229,6 @@
                             <iconset>image1</iconset>
                         </property>
                     </widget>
-                    <spacer row="2" column="3">
-                        <property name="name">
-                            <cstring>spacer1</cstring>
-                        </property>
-                        <property name="orientation">
-                            <enum>Horizontal</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>Expanding</enum>
-                        </property>
-                        <property name="sizeHint">
-                            <size>
-                                <width>80</width>
-                                <height>20</height>
-                            </size>
-                        </property>
-                    </spacer>
                     <widget class="QPushButton" row="2" column="1">
                         <property name="name">
                             <cstring>homepagePushButton</cstring>
@@ -266,22 +246,76 @@
                             <iconset>image2</iconset>
                         </property>
                     </widget>
-                    <widget class="QPushButton" row="2" column="2">
+                    <spacer row="2" column="3">
                         <property name="name">
-                            <cstring>addtionalPushButton</cstring>
+                            <cstring>spacer1</cstring>
                         </property>
-                        <property name="enabled">
-                            <bool>true</bool>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
                         </property>
-                        <property name="text">
-                            <string>&amp;Zusätzliches Paket!</string>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
                         </property>
-                        <property name="accel">
-                            <string>Alt+Z</string>
+                        <property name="sizeHint">
+                            <size>
+                                <width>100</width>
+                                <height>20</height>
+                            </size>
                         </property>
-                        <property name="iconSet">
-                            <iconset>image3</iconset>
+                    </spacer>
+                    <widget class="QGroupBox" row="2" column="2">
+                        <property name="name">
+                            <cstring>additionalGroupBox</cstring>
                         </property>
+                        <property name="title">
+                            <string></string>
+                        </property>
+                        <property name="toolTip" stdset="0">
+                            <string>Dieses Programm ist aus Platzgründen nicht in&lt;br&gt;
+der Grundausstattung von sidux-semanarix enthalten.</string>
+                        </property>
+                        <grid>
+                            <property name="name">
+                                <cstring>unnamed</cstring>
+                            </property>
+                            <property name="margin">
+                                <number>6</number>
+                            </property>
+                            <property name="spacing">
+                                <number>6</number>
+                            </property>
+                            <widget class="QLabel" row="0" column="0">
+                                <property name="name">
+                                    <cstring>pixmapLabel1</cstring>
+                                </property>
+                                <property name="minimumSize">
+                                    <size>
+                                        <width>16</width>
+                                        <height>16</height>
+                                    </size>
+                                </property>
+                                <property name="maximumSize">
+                                    <size>
+                                        <width>16</width>
+                                        <height>16</height>
+                                    </size>
+                                </property>
+                                <property name="pixmap">
+                                    <pixmap>image3</pixmap>
+                                </property>
+                                <property name="scaledContents">
+                                    <bool>true</bool>
+                                </property>
+                            </widget>
+                            <widget class="QLabel" row="0" column="1">
+                                <property name="name">
+                                    <cstring>textLabel2_2</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Zusaetzliches Paket</string>
+                                </property>
+                            </widget>
+                        </grid>
                     </widget>
                 </grid>
             </widget>
@@ -950,12 +984,6 @@
         <receiver>EduDialog</receiver>
         <slot>seminarixManual()</slot>
     </connection>
-    <connection>
-        <sender>addtionalPushButton</sender>
-        <signal>clicked()</signal>
-        <receiver>EduDialog</receiver>
-        <slot>additionalPackage()</slot>
-    </connection>
 </connections>
 <slots>
     <slot>getDescription()</slot>
@@ -969,7 +997,6 @@
     <slot>switchApplicationLanguage()</slot>
     <slot>searchApp()</slot>
     <slot>seminarixManual()</slot>
-    <slot>additionalPackage()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="6"/>
 <includehints>
