* "show not installed apps" added to combobox * vlc removed
-- Fabian Wuertz <xadras@sidux.com>  Wed, 05 Dec 2007 23:11:08 +0100

--- a/src/edudialog.ui
+++ b/src/edudialog.ui
@@ -175,6 +175,11 @@
                                         <string>Alle Programm</string>
                                     </property>
                                 </item>
+                                <item>
+                                    <property name="text">
+                                        <string>Nicht installierte Programme</string>
+                                    </property>
+                                </item>
                                 <property name="name">
                                     <cstring>comboBox</cstring>
                                 </property>
