--- a/src/edudialog.ui
+++ b/src/edudialog.ui
@@ -103,6 +103,9 @@
                         <property name="text">
                             <string></string>
                         </property>
+                        <property name="autoFormatting">
+                            <set>AutoAll</set>
+                        </property>
                     </widget>
                     <widget class="QListBox" row="1" column="0" rowspan="1" colspan="4">
                         <property name="name">
@@ -284,7 +287,7 @@ der Grundausstattung von sidux-semanarix enthalten.</string>
                                 <cstring>unnamed</cstring>
                             </property>
                             <property name="margin">
-                                <number>6</number>
+                                <number>4</number>
                             </property>
                             <property name="spacing">
                                 <number>6</number>
@@ -317,7 +320,7 @@ der Grundausstattung von sidux-semanarix enthalten.</string>
                                     <cstring>textLabel2_2</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Zusaetzliches Paket</string>
+                                    <string>Zusätzliches Paket</string>
                                 </property>
                             </widget>
                         </grid>
@@ -989,6 +992,12 @@ der Grundausstattung von sidux-semanarix enthalten.</string>
         <receiver>EduDialog</receiver>
         <slot>seminarixManual()</slot>
     </connection>
+    <connection>
+        <sender>descriptionTextBrowser</sender>
+        <signal>sourceChanged(const QString&amp;)</signal>
+        <receiver>EduDialog</receiver>
+        <slot>openUrl(const QString&amp;)</slot>
+    </connection>
 </connections>
 <slots>
     <slot>getDescription()</slot>
@@ -1002,6 +1011,7 @@ der Grundausstattung von sidux-semanarix enthalten.</string>
     <slot>switchApplicationLanguage()</slot>
     <slot>searchApp()</slot>
     <slot>seminarixManual()</slot>
+    <slot>openUrl(const QString&amp;)</slot>
 </slots>
 <layoutdefaults spacing="6" margin="6"/>
 <includehints>
